# Lambda

./: CMakeLists.txt  lambda-config.cmake
License/: Lambda.hpp
examples/: example.cpp
include/: lambda  lambda.hpp  lambda_internal  lambda_internal.hpp
lambda/lambda/: lambda.hpp
